--- a/ArasToUml/ArasToUml.csproj
+++ b/ArasToUml/ArasToUml.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="dotnetcli-0.1.1, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\References\dotnetcli\dotnetcli-0.1.1.dll</HintPath>
+      <HintPath>..\References\dotnetcli\dotnetcli-0.1.1.dll</HintPath>
     </Reference>
     <Reference Include="IOM, Version=12.0.0.13341, Culture=neutral, PublicKeyToken=524d880b05474146">
-      <HintPath>..\..\References\IOM\IOM.dll</HintPath>
+      <HintPath>..\References\IOM\IOM.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
