Add DotNetGraph NuGet package
Added the NuGet package for DotNetGraph in order to map the Aras data
model to .dot in a more structured and controlled way in comparison to
simply building a string to save in the file.

--- a/ArasToUml/ArasToUml.csproj
+++ b/ArasToUml/ArasToUml.csproj
@@ -35,6 +35,10 @@
     <Reference Include="dotnetcli-0.1.1, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\References\dotnetcli\dotnetcli-0.1.1.dll</HintPath>
     </Reference>
+    <Reference Include="DotNetGraph, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\DotNetGraph.1.0.2\lib\netstandard2.0\DotNetGraph.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="IOM, Version=12.0.0.13341, Culture=neutral, PublicKeyToken=524d880b05474146">
       <HintPath>..\References\IOM\IOM.dll</HintPath>
     </Reference>
@@ -50,6 +54,9 @@
     <Compile Include="ItemApplyException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
